<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    android:gravity="top|center"
    android:clipChildren="false"
    android:orientation="vertical">
    
    <android.support.v7.widget.CardView
        android:id="@+id/jerryMessageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.17"
                android:gravity="center_horizontal"
                android:background="@color/white_grey"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:text="@string/app_details"
                android:textAllCaps="true" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:layout_margin="8dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                tools:text="title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/white_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/release_date"/>

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                tools:text="title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/white_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/summary"/>

            <TextView
                android:id="@+id/summaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                tools:text="title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/white_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                tools:text="title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/white_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/category"/>

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                tools:text="title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/white_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/publisher"/>

            <TextView
                android:id="@+id/publisherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                android:autoLink="web"
                tools:text="title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/white_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:letterSpacing="0.18"
                android:lineSpacingExtra="3sp"
                android:textAllCaps="true"
                android:text="@string/app_link"/>

            <TextView
                android:id="@+id/appLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/grey"
                android:lineSpacingExtra="4sp"
                android:autoLink="web"
                tools:text="title" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>